force-app/main/default/objects/Retrospective__c/Retrospective__c.object-meta.xml
<CustomObject>
    <description>A retrospective is a means of collecting/providing feedback about an individual&#39;s performance on a particular release</description>
    <label>Retrospective</label>
    <nameField>
        <label>Retrospective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retrospectives</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>