force-app/main/default/objects/Retrospective__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The retrospective&#39;s subject&#39;s manager</description>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>