force-app/main/default/objects/Retrospective__c/fields/Overall_Rating_employee__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating_employee__c</fullName>
    <description>Overall Rating as seen by the employee for this release</description>
    <inlineHelpText>Please specify the overall rating for your performance in this release</inlineHelpText>
    <label>Overall Rating (employee)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sunny</fullName>
            </value>
            <value>
                <fullName>Partly Sunny</fullName>
            </value>
            <value>
                <fullName>Cloudy</fullName>
            </value>
            <value>
                <fullName>Rain Showers</fullName>
            </value>
            <value>
                <fullName>Blizzard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>