force-app/main/default/objects/Retrospective__c/fields/Review_Period__c.field-meta.xml
<CustomField>
    <fullName>Review_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The release for which this retrospective applies</description>
    <label>Retrospective Period</label>
    <referenceTo>ADM_Release__c</referenceTo>
    <relationshipName>Release_Retrospectives</relationshipName>
    <type>Lookup</type>
</CustomField>