force-app/main/default/objects/Retrospective__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <description>Status of the retrospective.  One of &#39;New&#39;, &#39;Submitted&#39;, or &#39;Shared&#39;</description>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>