force-app/main/default/objects/Retrospective__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User&#39;s Team</description>
    <label>Team</label>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipName>Release_Retrospectives</relationshipName>
    <type>Lookup</type>
</CustomField>