force-app/main/default/objects/Retrospective__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The subject of the release retrospective</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Release_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>