force-app/main/default/objects/Retrospective__c/fields/What_To_Do_Better_Next_Time_employee__c.field-meta.xml
<CustomField>
    <fullName>What_To_Do_Better_Next_Time_employee__c</fullName>
    <description>What To Do Better in the next release as seen by the employee</description>
    <inlineHelpText>Please specify what you can do better in the next release</inlineHelpText>
    <label>What To Do Better Next Time (employee)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>