force-app/main/default/objects/Retrospective__c/fields/What_To_Do_Better_Next_Time_manager__c.field-meta.xml
<CustomField>
    <fullName>What_To_Do_Better_Next_Time_manager__c</fullName>
    <description>What To Do Better Next Time as seen by the manager</description>
    <inlineHelpText>Please specify what this employee can do better next time</inlineHelpText>
    <label>What To Do Better Next Time (manager)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>