force-app/main/default/objects/Retrospective__c/fields/What_Went_Well_employee__c.field-meta.xml
<CustomField>
    <fullName>What_Went_Well_employee__c</fullName>
    <description>What Went Well in the release as seen by the employee</description>
    <inlineHelpText>Please specify what went well during this release</inlineHelpText>
    <label>What Went Well (employee)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>